--- a/package.json
+++ b/package.json
@@ -21,15 +21,36 @@
     "build:linux": "npm run build && electron-builder --linux"
   },
   "dependencies": {
+    "@codemirror/lang-markdown": "^6.3.4",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/theme-one-dark": "^6.1.3",
+    "@codemirror/view": "^6.38.1",
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
-    "electron-updater": "^6.3.9"
+    "@headlessui/vue": "^1.7.23",
+    "@heroicons/vue": "^2.2.0",
+    "chokidar": "^4.0.3",
+    "electron-store": "^10.1.0",
+    "electron-updater": "^6.3.9",
+    "fuse.js": "^7.1.0",
+    "highlight.js": "^11.11.1",
+    "markdown-it": "^14.1.0",
+    "markdown-it-footnote": "^4.0.0",
+    "markdown-it-highlightjs": "^4.2.0",
+    "markdown-it-table": "^4.1.1",
+    "markdown-it-task-lists": "^2.1.1",
+    "pinia": "^3.0.3",
+    "unocss": "^66.4.1"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "3.0.0",
     "@electron-toolkit/eslint-config-ts": "^3.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^22.16.5",
+    "@unocss/preset-attributify": "^66.4.1",
+    "@unocss/preset-icons": "^66.4.1",
+    "@unocss/preset-uno": "^66.4.1",
     "@vitejs/plugin-vue": "^6.0.0",
     "electron": "^37.2.3",
     "electron-builder": "^25.1.8",
