feat: 新增 Jupyter 风格的 JavaScript Markdown 笔记软件设计文档，集成代码块执行、交互式界面和数据可视化功能，更新技术栈并完善代码执行引擎和状态管理。

--- a/package.json
+++ b/package.json
@@ -29,18 +29,25 @@
     "@electron-toolkit/utils": "^4.0.0",
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
+    "@prettier/plugin-php": "^0.24.0",
+    "chart.js": "^4.5.0",
     "chokidar": "^4.0.3",
     "electron-store": "^10.1.0",
     "electron-updater": "^6.3.9",
     "fuse.js": "^7.1.0",
     "highlight.js": "^11.11.1",
+    "isolated-vm": "^6.0.1",
+    "katex": "^0.16.22",
     "markdown-it": "^14.1.0",
     "markdown-it-footnote": "^4.0.0",
     "markdown-it-highlightjs": "^4.2.0",
+    "markdown-it-katex": "^2.0.3",
     "markdown-it-table": "^4.1.1",
     "markdown-it-task-lists": "^2.1.1",
     "pinia": "^3.0.3",
-    "unocss": "^66.4.1"
+    "prismjs": "^1.30.0",
+    "unocss": "^66.4.1",
+    "vue-chartjs": "^5.3.2"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "3.0.0",
