feat: 完成 Lexical 编辑器的核心功能实现，包括环境准备、依赖安装、Vue 集成、编辑器配置管理及主题支持，新增 Lexical 编辑器测试组件，优化样式和调试信息展示

--- a/package.json
+++ b/package.json
@@ -33,6 +33,18 @@
     "@electron-toolkit/utils": "^4.0.0",
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
+    "@lexical/clipboard": "^0.34.0",
+    "@lexical/code": "^0.34.0",
+    "@lexical/file": "^0.34.0",
+    "@lexical/history": "^0.34.0",
+    "@lexical/html": "^0.34.0",
+    "@lexical/link": "^0.34.0",
+    "@lexical/list": "^0.34.0",
+    "@lexical/markdown": "^0.34.0",
+    "@lexical/rich-text": "^0.34.0",
+    "@lexical/selection": "^0.34.0",
+    "@lexical/table": "^0.34.0",
+    "@lexical/utils": "^0.34.0",
     "@prettier/plugin-php": "^0.24.0",
     "chart.js": "^4.5.0",
     "chokidar": "^4.0.3",
@@ -42,6 +54,7 @@
     "highlight.js": "^11.11.1",
     "isolated-vm": "^6.0.1",
     "katex": "^0.16.22",
+    "lexical": "^0.34.0",
     "markdown-it": "^14.1.0",
     "markdown-it-footnote": "^4.0.0",
     "markdown-it-highlightjs": "^4.2.0",
