feat: 集成 @lexical/code-shiki 模块，支持代码块创建和语法高亮功能，完善相关文档和测试组件

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@heroicons/vue": "^2.2.0",
     "@lexical/clipboard": "^0.34.0",
     "@lexical/code": "^0.34.0",
+    "@lexical/code-shiki": "^0.34.0",
     "@lexical/file": "^0.34.0",
     "@lexical/history": "^0.34.0",
     "@lexical/html": "^0.34.0",
