feat: 完成 Electron 应用的 Playwright 端到端测试集成，新增测试文件和辅助函数，优化测试配置，支持主题切换和响应式布局测试

--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
     "test:coverage": "vitest run --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report",
+    "test:e2e:electron": "playwright test --project=electron",
+    "test:all": "npm run test:run && npm run test:e2e",
     "start": "electron-vite preview",
     "dev": "electron-vite dev",
     "build": "npm run typecheck && electron-vite build",
@@ -71,6 +78,7 @@
     "@electron-toolkit/eslint-config-prettier": "3.0.0",
     "@electron-toolkit/eslint-config-ts": "^3.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
+    "@playwright/test": "^1.54.2",
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^22.16.5",
     "@unocss/preset-attributify": "^66.4.1",
@@ -81,6 +89,7 @@
     "@vue/test-utils": "^2.4.6",
     "electron": "^37.2.3",
     "electron-builder": "^25.1.8",
+    "electron-playwright-helpers": "^1.7.1",
     "electron-vite": "^4.0.0",
     "eslint": "^9.31.0",
     "eslint-plugin-vue": "^10.3.0",
