--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "test:e2e:report": "playwright show-report",
     "test:e2e:electron": "playwright test --project=electron",
     "test:all": "npm run test:run && npm run test:e2e",
-    "start": "electron-vite preview",
+    "start": "electron-vite dev",
     "dev": "electron-vite dev",
+    "preview": "electron-vite preview",
     "build": "npm run typecheck && electron-vite build",
     "postinstall": "electron-builder install-app-deps",
     "build:unpack": "npm run build && electron-builder --dir",
@@ -40,19 +41,20 @@
     "@electron-toolkit/utils": "^4.0.0",
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
-    "@lexical/clipboard": "^0.34.0",
-    "@lexical/code": "^0.34.0",
-    "@lexical/code-shiki": "^0.34.0",
-    "@lexical/file": "^0.34.0",
-    "@lexical/history": "^0.34.0",
-    "@lexical/html": "^0.34.0",
-    "@lexical/link": "^0.34.0",
-    "@lexical/list": "^0.34.0",
-    "@lexical/markdown": "^0.34.0",
-    "@lexical/rich-text": "^0.34.0",
-    "@lexical/selection": "^0.34.0",
-    "@lexical/table": "^0.34.0",
-    "@lexical/utils": "^0.34.0",
+    "@lexical/clipboard": "^0.35.0",
+    "@lexical/code": "^0.35.0",
+    "@lexical/code-shiki": "^0.35.0",
+    "@lexical/dragon": "^0.35.0",
+    "@lexical/file": "^0.35.0",
+    "@lexical/history": "^0.35.0",
+    "@lexical/html": "^0.35.0",
+    "@lexical/link": "^0.35.0",
+    "@lexical/list": "^0.35.0",
+    "@lexical/markdown": "^0.35.0",
+    "@lexical/rich-text": "^0.35.0",
+    "@lexical/selection": "^0.35.0",
+    "@lexical/table": "^0.35.0",
+    "@lexical/utils": "^0.35.0",
     "@prettier/plugin-php": "^0.24.0",
     "chart.js": "^4.5.0",
     "chokidar": "^4.0.3",
@@ -62,7 +64,7 @@
     "highlight.js": "^11.11.1",
     "isolated-vm": "^6.0.1",
     "katex": "^0.16.22",
-    "lexical": "^0.34.0",
+    "lexical": "^0.35.0",
     "markdown-it": "^14.1.0",
     "markdown-it-footnote": "^4.0.0",
     "markdown-it-highlightjs": "^4.2.0",
@@ -105,7 +107,8 @@
   "pnpm": {
     "onlyBuiltDependencies": [
       "electron",
-      "esbuild"
+      "esbuild",
+      "isolated-vm"
     ]
   }
 }
