--- a/package.json
+++ b/package.json
@@ -41,20 +41,20 @@
     "@electron-toolkit/utils": "^4.0.0",
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
-    "@lexical/clipboard": "^0.35.0",
-    "@lexical/code": "^0.35.0",
-    "@lexical/code-shiki": "^0.35.0",
-    "@lexical/dragon": "^0.35.0",
-    "@lexical/file": "^0.35.0",
-    "@lexical/history": "^0.35.0",
-    "@lexical/html": "^0.35.0",
-    "@lexical/link": "^0.35.0",
-    "@lexical/list": "^0.35.0",
-    "@lexical/markdown": "^0.35.0",
-    "@lexical/rich-text": "^0.35.0",
-    "@lexical/selection": "^0.35.0",
-    "@lexical/table": "^0.35.0",
-    "@lexical/utils": "^0.35.0",
+    "@lexical/clipboard": "0.35.0",
+    "@lexical/code": "0.35.0",
+    "@lexical/code-shiki": "0.35.0",
+    "@lexical/dragon": "0.35.0",
+    "@lexical/file": "0.35.0",
+    "@lexical/history": "0.35.0",
+    "@lexical/html": "0.35.0",
+    "@lexical/link": "0.35.0",
+    "@lexical/list": "0.35.0",
+    "@lexical/markdown": "0.35.0",
+    "@lexical/rich-text": "0.35.0",
+    "@lexical/selection": "0.35.0",
+    "@lexical/table": "0.35.0",
+    "@lexical/utils": "0.35.0",
     "@prettier/plugin-php": "^0.24.0",
     "chart.js": "^4.5.0",
     "chokidar": "^4.0.3",
@@ -64,7 +64,7 @@
     "highlight.js": "^11.11.1",
     "isolated-vm": "^6.0.1",
     "katex": "^0.16.22",
-    "lexical": "^0.35.0",
+    "lexical": "0.35.0",
     "markdown-it": "^14.1.0",
     "markdown-it-footnote": "^4.0.0",
     "markdown-it-highlightjs": "^4.2.0",
@@ -110,5 +110,12 @@
       "esbuild",
       "isolated-vm"
     ]
+  },
+  "packageManager": "pnpm@9.15.0",
+  "engines": {
+    "node": "22.16.0"
+  },
+  "volta": {
+    "node": "22.16.0"
   }
 }
