feat: 新增 Emoji 插件，支持表情符号输入，优化编辑器内容处理逻辑，更新预填充文本示例，提升用户体验

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "electron-updater": "^6.3.9",
     "fuse.js": "^7.1.0",
     "highlight.js": "^11.11.1",
+    "inline-style-parser": "^0.2.4",
     "isolated-vm": "^6.0.1",
     "katex": "^0.16.22",
     "lexical": "0.35.0",
