feat: 更新 tsconfig 和 vitest 配置，新增测试路径和别名，优化 Lexical 编辑器测试工具，提升测试可读性和结构

--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -4,7 +4,8 @@
     "src/renderer/src/env.d.ts",
     "src/renderer/src/**/*",
     "src/renderer/src/**/*.vue",
-    "src/preload/*.d.ts"
+    "src/preload/*.d.ts",
+    "test/**/*"
   ],
   "compilerOptions": {
     "composite": true,
@@ -15,6 +16,9 @@
       ],
       "@/*": [
         "src/renderer/src/*"
+      ],
+      "@test/*": [
+        "test/*"
       ]
     }
   }
