--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@lexical/table": "0.35.0",
     "@lexical/utils": "0.35.0",
     "@prettier/plugin-php": "^0.24.0",
+    "@vueuse/core": "^13.9.0",
     "chart.js": "^4.5.0",
     "chokidar": "^4.0.3",
     "electron-store": "^10.1.0",
