--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,27 +2,29 @@ packages:
   - packages/*
 
 catalog:
-  "lexical": "0.36.2"
-  "@lexical/clipboard": "0.36.2"
-  "@lexical/code": "0.36.2"
-  "@lexical/code-shiki": "0.36.2"
-  "@lexical/dragon": "0.36.2"
-  "@lexical/file": "0.36.2"
-  "@lexical/hashtag": "0.36.2"
-  "@lexical/history": "0.36.2"
-  "@lexical/html": "0.36.2"
-  "@lexical/link": "0.36.2"
-  "@lexical/list": "0.36.2"
-  "@lexical/mark": "0.36.2"
-  "@lexical/markdown": "0.36.2"
-  "@lexical/overflow": "0.36.2"
-  "@lexical/plain-text": "0.36.2"
-  "@lexical/rich-text": "0.36.2"
-  "@lexical/selection": "0.36.2"
-  "@lexical/table": "0.36.2"
-  "@lexical/text": "0.36.2"
-  "@lexical/utils": "0.36.2"
-  "@lexical/yjs": "0.36.2"
+  "lexical": "0.37.0"
+  "@lexical/clipboard": "0.37.0"
+  "@lexical/code": "0.37.0"
+  "@lexical/code-shiki": "0.37.0"
+  "@lexical/dragon": "0.37.0"
+  "@lexical/file": "0.37.0"
+  "@lexical/hashtag": "0.37.0"
+  "@lexical/history": "0.37.0"
+  "@lexical/html": "0.37.0"
+  "@lexical/link": "0.37.0"
+  "@lexical/list": "0.37.0"
+  "@lexical/mark": "0.37.0"
+  "@lexical/markdown": "0.37.0"
+  "@lexical/overflow": "0.37.0"
+  "@lexical/plain-text": "0.37.0"
+  "@lexical/rich-text": "0.37.0"
+  "@lexical/selection": "0.37.0"
+  "@lexical/table": "0.37.0"
+  "@lexical/text": "0.37.0"
+  "@lexical/utils": "0.37.0"
+  "@lexical/yjs": "0.37.0"
   "tiny-invariant": "^1.3.3"
+  "prismjs": "^1.30.0"
+  "@types/prismjs": "^1.26.0"
   "vue": "^3.5.17"
   "yjs": "^13.6.18"
